// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage should math the snapshot, in a desktop viewport 1`] = `
<div>
  <div>
    <div>
      React Helmet
    </div>
  </div>
  <div
    class="fr-mt-8w"
  >
    <div>
      ServiceProviderNameComponent
    </div>
    <div>
      UserHistoryComponent
    </div>
    <div>
      SearchComponent
    </div>
    <div
      class="text-center fr-mt-6w"
    >
      <div>
        LinkComponent
      </div>
    </div>
  </div>
  <div>
    <p
      class="text-center fr-mt-6w"
    >
      <a
        class="fr-link fr-link--lg fr-icon-question-fill fr-link--icon-left link"
        href="https://tally.so/r/w5jJVN"
        rel="noopener noreferrer"
        target="_blank"
      >
        Que pensez-vous d'AgentConnect ?
      </a>
    </p>
  </div>
</div>
`;

exports[`HomePage should math the snapshot, in a mobile viewport 1`] = `
<div>
  <div>
    <div>
      React Helmet
    </div>
  </div>
  <div
    class="fr-mt-4w"
  >
    <div>
      ServiceProviderNameComponent
    </div>
    <div>
      UserHistoryComponent
    </div>
    <div>
      SearchComponent
    </div>
    <div
      class="text-center fr-mt-6w"
    >
      <div>
        LinkComponent
      </div>
    </div>
  </div>
  <div>
    <p
      class="text-center fr-mt-6w"
    >
      <a
        class="fr-link fr-link--lg fr-icon-question-fill fr-link--icon-left link"
        href="https://tally.so/r/w5jJVN"
        rel="noopener noreferrer"
        target="_blank"
      >
        Que pensez-vous d'AgentConnect ?
      </a>
    </p>
  </div>
</div>
`;
